<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:robobunny="http://robobunny.com" >

    <PreferenceCategory android:title="@string/title_vibrate_intensity" >
        <Preference 
            android:summary="@string/summ_vibrate_intensity_legend"/>

        <com.robobunny.SeekBarPreference
            android:defaultValue="2"
            android:key="pref_connected_vibrate_intensity"
            android:max="4"
            android:summary="@string/summ_connected_vibrate_intensity"
            android:title="@string/title_vibrate_connected"
            robobunny:min="1"
            robobunny:unitsLeft=""
            robobunny:unitsRight="" />
        <com.robobunny.SeekBarPreference
            android:defaultValue="2"
            android:key="pref_hangup_vibrate_intensity"
            android:max="4"
            android:summary="@string/summ_hangup_vibrate_intensity"
            android:title="@string/title_vibrate_hangup"
            robobunny:min="1"
            robobunny:unitsLeft=""
            robobunny:unitsRight="" />
        <com.robobunny.SeekBarPreference
            android:defaultValue="2"
            android:key="pref_call_waiting_vibrate_intensity"
            android:max="4"
            android:summary="@string/summ_call_waiting_vibrate_intensity"
            android:title="@string/title_vibrate_call_waiting"
            robobunny:min="1"
            robobunny:unitsLeft=""
            robobunny:unitsRight="" />
        <com.robobunny.SeekBarPreference
            android:defaultValue="2"
            android:key="pref_every_minute_vibrate_intensity"
            android:max="4"
            android:summary="@string/summ_every_minute_vibrate_intensity"
            android:title="@string/title_vibrate_every_minute"
            robobunny:min="1"
            robobunny:unitsLeft=""
            robobunny:unitsRight="" />
        <com.robobunny.SeekBarPreference
            android:defaultValue="2"
            android:key="pref_fixed_time_vibrate_intensity"
            android:max="4"
            android:summary="@string/summ_fixed_time_vibrate_intensity"
            android:title="@string/title_vibrate_fixed_time"
            robobunny:min="1"
            robobunny:unitsLeft=""
            robobunny:unitsRight="" />
        </PreferenceCategory>

</PreferenceScreen>